namespace HomeIMS.SharedContracts.Domain;

public class ArticleGroup
{
    public Guid Id { get; set; }

    public string? Name { get; set; }
    public string? Description { get; set; }
}